--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		KatsuyaUeki's Page
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>KatsuyaUeki's Page</title>
+
+	
+</head>
 	<body>
 		welcome to this page!
+		{$test}
 	</body>
 </html>
