--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>KatsuyaUeki's Page</title>
-
-	
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		welcome to this page!
-		{$test}
+		<tr class="header-1">Katsuya Ueki's Page</tr>
+		<tr class="header-2">
+			<a class="elem" id="profile" href="">Profile</a>
+			<a class="elem" id="portfolio" href="">PortFolio</a>
+			<a class="elem" id="contact" href="">Contact</a>
+		</tr>
+
+		<div id="main">
+
+		</div>
 	</body>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script>
+
+</script>
 </html>
