--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		<tr class="header-1">Katsuya Ueki's Page</tr>
+		<tr class="header-1">Katsuya Ueki's Page<br></tr>
 		<tr class="header-2">
 			<a class="elem" id="profile" href="">Profile</a>
 			<a class="elem" id="portfolio" href="">PortFolio</a>
