--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 			<a class="elem" id="portfolio" href="">PortFolio</a>
 			<a class="elem" id="contact" href="">Contact</a>
 		</tr>
-
 		<div id="main">
-
+<img src="sources/IMG_1098.jpg">
 		</div>
 	</body>
 <script type="text/javascript" src="js/index.js"></script>
