--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<a class="elem" id="contact" href="">Contact</a>
 		</tr>
 		<div id="main">
-<img src="sources/IMG_1098.jpg">
+			これj
+			<img src="sources/IMG_1098.jpg">
 		</div>
 	</body>
 <script type="text/javascript" src="js/index.js"></script>
