--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</tr>
 		<div id="main">
 			これj
-			<img src="sources/IMG_1098.jpg">
+			<img src="sources/IMG_1098.jpg" witdh="100%" height="100%">
 		</div>
 	</body>
 <script type="text/javascript" src="js/index.js"></script>
