--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
+$(function(){
+	$("#profile").on("click",function(){
+		alert("Profileを表示しますj");
+	});
+	$("#portfolio").on("click",function(){
+		alert("Portfolioを表示しますj");
 
+	});
+	$("#contact").on("click",function(){
+		alert("Contactを表示します")
+	});
+});
 </script>
 </html>
