--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a class="elem" id="contact" href="">Contact</a>
 		</tr>
 		<div id="main">
-			これ
+			これfad
 			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
 		</div>
 	</body>
