--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script>
 $(function(){
 	$("#profile").on("click",function(){
+		console.log("OK");
 		alert("Profileを表示しますj");
 	});
 	$("#portfolio").on("click",function(){
