--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
-$(function(){
-	$("#profile").on("click",function(){
-		console.log("OK");
-		alert("Profileを表示しますj");
-	});
-	$("#portfolio").on("click",function(){
-		alert("Portfolioを表示しますj");
+	console.log("ok");
+//$(function(){
+//	$("#profile").on("click",function(){
+//		console.log("OK");
+//		alert("Profileを表示しますj");
+//	});
+//	$("#portfolio").on("click",function(){
+//		alert("Portfolioを表示しますj");
 
-	});
-	$("#contact").on("click",function(){
-		alert("Contactを表示します")
-	});
-});
+//	});
+//	$("#contact").on("click",function(){
+//		alert("Contactを表示します")
+//	});
+//});
 </script>
 </html>
