--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
-	console.log("ok");
 //$(function(){
-//	$("#profile").on("click",function(){
-//		console.log("OK");
-//		alert("Profileを表示しますj");
-//	});
+	$("#profile").on("click",function(){
+		console.log("OK");
+		alert("Profileを表示しますj");
+	});
 //	$("#portfolio").on("click",function(){
 //		alert("Portfolioを表示しますj");
 
