--- a/index.html
+++ b/index.html
@@ -6,32 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		<tr class="header-1">Katsuya Ueki's Page<br></tr>
-		<tr class="header-2">
-			<a class="elem" id="profile" href="">Profile</a>
-			<a class="elem" id="portfolio" href="">PortFolio</a>
-			<a class="elem" id="contact" href="">Contact</a>
-		</tr>
-		<div id="main">
-			これfad
-			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
+		<h1 class="header-1">Katsuya Ueki's Page<br></h1>
+		<div class="header">
+			<ul class="header_elem">
+			<li id="profile" href="profile.html">Profile</a>
+			<li id="portfolio" href="portfolio.html">PortFolio</a>
+			<li id="contact" href="contact.html">Contact</a>
+			</ul>
 		</div>
+		<div id="main">
+			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
+		</div>
+		<div class="footer"></div>
 	</body>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
-//$(function(){
-	$("#profile").on("click",function(){
-		console.log("OK");
-		alert("Profileを表示しますj");
-	});
-//	$("#portfolio").on("click",function(){
-//		alert("Portfolioを表示しますj");
-
-//	});
-//	$("#contact").on("click",function(){
-//		alert("Contactを表示します")
-//	});
-//});
-</script>
+		</script>
 </html>
