--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<h1 class="header-1">Katsuya Ueki's Page<br></h1>
 		<div class="header">
 			<ul class="header_elem">
-			<li id="profile" href="profile.html">Profile</a>
-			<li id="portfolio" href="portfolio.html">PortFolio</a>
-			<li id="contact" href="contact.html">Contact</a>
+			<a id="profile" href="profile.html">Profile</a>
+			<a id="portfolio" href="portfolio.html">PortFolio</a>
+			<a id="contact" href="contact.html">Contact</a>
 			</ul>
 		</div>
 		<div id="main">
