--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		<h1 class="header-1">Katsuya Ueki's Page<br></h1>
+		<div class="header-1">Katsuya Ueki's Page<br></div>
 		<div class="header">
 			<a id="profile" href="profile.html">Profile</a>
 			<a id="portfolio" href="portfolio.html">PortFolio</a>
