--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		<div class="header-1">Katsuya Ueki's Page<br></div>
 		<div class="header">
-			<a id="profile" href="profile.html">Profile</a>
-			<a id="portfolio" href="portfolio.html">PortFolio</a>
-			<a id="contact" href="contact.html">Contact</a>
+			<div class="header-1">Katsuya Ueki's Page<br></div>
+			<div>
+				<a id="profile" href="profile.html">Profile</a>
+				<a id="portfolio" href="portfolio.html">PortFolio</a>
+				<a id="contact" href="contact.html">Contact</a>
+			</div>
 		</div>
 		<div id="main">
 			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
