--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 	<body>
 		<div class="header">
-			<div class="header-1">Katsuya Ueki's Page HI<br></div>
-			<div>
+			<div class="header-1">Katsuya Ueki's Page</div>
+			<div class="header_elem">
 				<a id="profile" href="profile.html">Profile</a>
 				<a id="portfolio" href="portfolio.html">PortFolio</a>
 				<a id="contact" href="contact.html">Contact</a>
