--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
+		<script>include("common/header.html");</script>
 		<div class="header">
 			<div class="header-1">Katsuya Ueki's Page</div>
 			<div class="header_elem">
