--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 	<body>
 		<iframe src="common/header.html"></iframe>
+		<div src="common/header.html"></div>
 		<div class="header">
 			<div class="header-1">Katsuya Ueki's Page</div>
 			<div class="header_elem">
