--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,14 @@
     </head>
     <body>
         <h1></h1>
-        <div class="header"></div>
+		<div class="header">
+			<div class="header-1">Katsuya Ueki's Page</div>
+			<div class="header_elem">
+				<a id="About" href="profile.html">About</a>
+				<a id="portfolio" href="portfolio.html">PortFolio</a>
+				<a id="contact" href="contact.html">Contact</a>
+			</div>
+		</div>
         <div class="main"></div>
         <div class="footer"></div>
     </body>
