--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>KatsuyaUeki's Page</title>
+	<title>Page</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
 		<div class="header">
-			<div class="header-1">Katsuya Ueki's Page</div>
-			<div class="header_elem">
-				<a id="About" href="profile.html">About</a>
-				<a id="portfolio" href="portfolio.html">PortFolio</a>
-				<a id="contact" href="contact.html">Contact</a>
+			<div class="header-logo">Page</div>
+			<div class="header_list">
+				<ul>
+					<li><a href="profile.html">About</a></li>
+					<li><a href="portfolio.html">PortFolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
 			</div>
 		</div>
 		<div id="main">
