--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,9 @@
 				<a id="contact" href="contact.html">Contact</a>
 			</div>
 		</div>
-        <div class="main"></div>
+        <div class="main">
+            <h2></h2>
+        </div>
         <div class="footer"></div>
     </body>
 </html>
