--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="header">
 			<div class="header-logo">Page</div>
-			<div class="header_list">
+			<div class="header-list">
 				<ul>
 					<li><a href="profile.html">About</a></li>
 					<li><a href="portfolio.html">PortFolio</a></li>
@@ -16,10 +16,21 @@
 				</ul>
 			</div>
 		</div>
+
 		<div id="main">
 			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
 		</div>
-		<div class="footer"></div>
+		<div class="footer">
+			<div class="footer-logo">PAge</div>
+			<div class="footer-list">
+				<ul>
+					<li><a href="">About</a></li>
+					<li><a href="">PortFolio</a></li>
+					<li><a href="">Contact</a></li>
+				</ul>
+			</div>
+
+		</div>
 	</body>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
