--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 
-		<div id="main">
+		<div class="main">
 			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
 		</div>
 		<div class="footer">
