--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 		</div>
 	</body>
-<script type="text/javascript" src="js/index.js"></script>
+<!--<script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
-		</script>
+</script>-->
 </html>
