--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		</div>
 
 		<div class="main">
-			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
+			<h1 class="main-contents">HELLO WORLD.</h1>
+			<h2 class="contents-item"></h2>
+			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
 		</div>
 		<div class="footer">
 			<div class="footer-logo">PAge</div>
