--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<div class="main">
 			<h1 class="main-contents">HELLO WORLD.</h1>
 			<h2 class="contents-item"></h2>
+			<a class="hello">Click!</a>
 			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
 		</div>
 		<div class="footer">
@@ -34,8 +35,8 @@
 
 		</div>
 	</body>
-<!--<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
-</script>-->
+</script>
 </html>
