--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<div class="main">
 			<h1 class="main-contents">HELLO WORLD.</h1>
 			<h2 class="contents-item"></h2>
-			<a class="hello">Click!</a>
+			<button class="hello">Click!</button>
+
 			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
 		</div>
 		<div class="footer">
