--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
+	$(".hello").click(function(){
+		alert("OKOK");
+	})
 </script>
 </html>
