--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
 		</div>
 		<div class="footer">
-			<div class="footer-logo">PAge</div>
+			<div class="footer-logo">Page</div>
 			<div class="footer-list">
 				<ul>
 					<li><a href="">About</a></li>
@@ -39,8 +39,11 @@
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
+	$(function(){
+
 	$(".hello").click(function(){
 		alert("OKOK");
+	})
 	})
 </script>
 </html>
