--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 		</div>
 	</body>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </html>
