--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
+		<!--modal-->
+		<div class="modal-wrapper">
+			<div class="modal-container">
+				<h2 class="modal-title"></h2>
+			</div>
+		</div>
+		<!--modal end-->
 		<div class="header">
 			<div class="header-logo">Page</div>
 			<div class="header-list">
 				<ul>
-					<li><a href="profile.html">About</a></li>
+					<li><a class="about">About</a></li>
 					<li><a href="portfolio.html">PortFolio</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a class="contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
