--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 
 		<div class="main">
-			<h1 class="main-contents">HELLO WORLD.</h1>
+			<h1 class="main-contents">This is Katsuya Ueki's Page.</h1>
 			<h2 class="contents-item"></h2>
 			<button class="hello">Click!</button>
 
