--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<div class="header-logo">Page</div>
 			<div class="header-list">
 				<ul>
-					<li><a class="about">About</a></li>
-					<li><a href="portfolio.html">PortFolio</a></li>
-					<li><a class="contact">Contact</a></li>
+					<li><a class="about btn">About</a></li>
+					<li><a href="portfolio.html" class="btn">PortFolio</a></li>
+					<li><a class="contact btn">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -29,7 +29,7 @@
 			<h2 class="contents-item"></h2>
 			<button class="hello">Click!</button>
 
-			<img src="sources/IMG_1098.jpg" witdh="300" height="200">
+			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
 		</div>
 		<div class="footer">
 			<div class="footer-logo">Page</div>
