--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<div class="footer-logo">Page</div>
 			<div class="footer-list">
 				<ul>
-					<li><a href="">About</a></li>
-					<li><a href="">PortFolio</a></li>
-					<li><a href="">Contact</a></li>
+					<li><a class="btn">About</a></li>
+					<li><a href="#">PortFolio</a></li>
+					<li><a class="btn">Contact</a></li>
 				</ul>
 			</div>
 
