--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
 		</div>
-		<div class="footer">
+		<!--<div class="footer">
 			<div class="footer-logo">Page</div>
 			<div class="footer-list">
 				<ul>
@@ -41,7 +41,7 @@
 				</ul>
 			</div>
 
-		</div>
+		</div>-->
 	</body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
