--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 	<body>
 		<!--modal-->
-		<div class="modal-wrapper">
+		<div class="modal-wrapper" style="display:none;">
 			<div class="modal-container">
 				<h2 class="modal-title"></h2>
 			</div>
