--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<div class="modal-wrapper" style="display:none;">
 			<div class="modal-container">
 				<h2 class="modal-title"></h2>
+				<span class="back">X</span>
 			</div>
 		</div>
 		<!--modal end-->
