--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<div class="modal-container">
 				<h2 class="modal-title"></h2>
 				<span class="back">X</span>
+				<div class="modal-inner"></div>
 			</div>
 		</div>
 		<!--modal end-->
