--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			<div class="modal-container">
 				<h2 class="modal-title"></h2>
 				<span class="back">X</span>
-				<div class="modal-inner"></div>
 			</div>
+				<div class="modal-content"></div>
 		</div>
 		<!--modal end-->
 		<div class="header">
