--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<h2 class="modal-title"></h2>
 				<span class="back">X</span>
 			</div>
-			<div class="modal-content"></div>
+			<div class="modal-inner"></div>
 		</div>
 		<!--modal end-->
 		<div class="header">
