--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
+		<div id="haader"></div>
 		<!--modal-->
 		<div class="modal-wrapper" style="display:none;">
 			<div class="modal-container">
 				<h2 class="modal-title"></h2>
-				<span class="back">X</span>
+				<span class="back">×</span>
 			</div>
 			<div class="modal-inner"></div>
 		</div>
@@ -20,7 +21,7 @@
 			<div class="header-list">
 				<ul>
 					<li><a class="about btn">About</a></li>
-					<li><a href="portfolio.html" class="btn">PortFolio</a></li>
+					<li><a class="port btn">PortFolio</a></li>
 					<li><a class="contact btn">Contact</a></li>
 				</ul>
 			</div>
