--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		<div id="haader"></div>
+		<div id="header"></div>
 		<!--modal-->
 		<div class="modal-wrapper" style="display:none;">
 			<div class="modal-container">
