--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="modal-inner"></div>
 		</div>
 		<!--modal end-->
-		<div class="header">
+<!--		<div class="header">
 			<div class="header-logo">Page</div>
 			<div class="header-list">
 				<ul>
@@ -26,7 +26,7 @@
 				</ul>
 			</div>
 		</div>
-
+	-->
 		<div class="main">
 			<h1 class="main-contents">This is Katsuya Ueki's Page.</h1>
 			<h2 class="contents-item"></h2>
