--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 	<body>
-		<div id="header"></div>
 		<!--modal-->
 		<div class="modal-wrapper" style="display:none;">
 			<div class="modal-container">
@@ -16,7 +15,7 @@
 			<div class="modal-inner"></div>
 		</div>
 		<!--modal end-->
-<!--		<div class="header">
+		<div class="header">
 			<div class="header-logo">Page</div>
 			<div class="header-list">
 				<ul>
@@ -26,7 +25,7 @@
 				</ul>
 			</div>
 		</div>
-	-->
+
 		<div class="main">
 			<h1 class="main-contents">This is Katsuya Ueki's Page.</h1>
 			<h2 class="contents-item"></h2>
