--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 		</div>
 		<!--modal end-->
 		<div class="header">
-			<div class="header-logo">Page</div>
-			<div class="header-list">
-				<ul>
-					<li><a class="about btn">About</a></li>
-					<li><a class="port btn">PortFolio</a></li>
-					<li><a class="contact btn">Contact</a></li>
-				</ul>
+			<div class="header-inner">
+				<div class="header-logo">Page</div>
+				<div class="header-list">
+					<ul>
+						<li><a class="about btn">About</a></li>
+						<li><a class="port btn">PortFolio</a></li>
+						<li><a class="contact btn">Contact</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
 		<div class="main">
-			<h3 class="main-contents">This is Katsuya Ueki's Page.</h3>
+			<h5 class="main-contents">This is Katsuya Ueki's Page.</h5>
 			<h2 class="contents-item"></h2>
 			<button class="hello">Click!</button>
 
