--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,19 @@
     <body>
         <h1></h1>
 		<div class="header">
-			<div class="header-1">Katsuya Ueki's Page</div>
-			<div class="header_elem">
-				<a id="About" href="profile.html">About</a>
-				<a id="portfolio" href="portfolio.html">PortFolio</a>
-				<a id="contact" href="contact.html">Contact</a>
+			<div class="header-inner">
+				<div class="header-1">Katsuya Ueki's Page</div>
+				<div class="header_elem">
+					<a id="About" href="profile.html">About</a>
+					<a id="portfolio" href="portfolio.html">PortFolio</a>
+					<a id="contact" href="contact.html">Contact</a>
+				</div>
 			</div>
 		</div>
-        <div class="main"></div>
+        <div class="main">
+			<div class="main-inner">
+			</div>
+		</div>
         <div class="footer"></div>
     </body>
 </html>
