--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 		</div>
 
 		<div class="main">
-			<h5 class="main-contents">This is Katsuya Ueki's Page.</h5>
-			<h2 class="contents-item"></h2>
-			<button class="hello">Click!</button>
-
-			<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
+			<div class="main-inner">
+				<h5 class="main-contents">This is Katsuya Ueki's Page.</h5>
+				<h2 class="contents-item"></h2>
+				<button class="hello">Click!</button>
+	
+				<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
+			</div>
 		</div>
 		<!--<div class="footer">
 			<div class="footer-logo">Page</div>
