--- a/profile.html
+++ b/profile.html
@@ -3,16 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>About</title>
-        <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
     <body>
         <h1></h1>
 		<div class="header">
-			<div class="header-1">Katsuya Ueki's Page</div>
-			<div class="header_elem">
-				<a id="About" href="profile.html">About</a>
-				<a id="portfolio" href="portfolio.html">PortFolio</a>
-				<a id="contact" href="contact.html">Contact</a>
+			<div class="header-inner">
+				<!--
+				<div class="header-logo">Page</div>
+				-->
+				<div class="header-list">
+					<ul>
+						<li><a class="about btn" href="profile.html">About</a></li>
+						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
+						<li><a class="contact btn" href="contact.html">Contact</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
         <div class="main">
