--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 				-->
 				<div class="header-list">
 					<ul>
-						<li><a class="about btn">About</a></li>
-						<li><a class="port btn">PortFolio</a></li>
-						<li><a class="contact btn">Contact</a></li>
+						<li><a class="about btn" href="profile.html">About</a></li>
+						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
+						<li><a class="contact btn" href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -32,7 +32,7 @@
 
 		<div class="main">
 			<div class="main-inner">
-				<h5 class="main-contents">aa1aa2aa3aa4aa5aa6aa7aa8aa9aa10</h5>
+				<h4 class="main-contents"></h4>
 				<h2 class="contents-item"></h2>
 				<button class="hello">Click!</button>
 	
