--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Contact</title>
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/contact/stylesheet-contact.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 </head>
 	<body>
 		<div class="header">
@@ -13,7 +14,7 @@
 				-->
 				<div class="header-list">
 					<ul>
-						<li><a class="about btn" href="profile.html">About</a></li>
+					   	<li><a class="about btn" href="profile.html">About</a></li>
 						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
 						<li><a class="contact btn" href="contact.html">Contact</a></li>
 					</ul>
@@ -22,7 +23,14 @@
 		</div>
 		<div class="main">
 			<div class="main-inner">
-				<h4 class="main-contents">Contact</h4>
+				<h5 class="main-contents">Contact</h5>
+				<div class="main-sabcontents">
+					<!--
+					<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a>
+					-->	
+					<i>Twitterのダイレクトメッセージをくださるとすぐに反応できます</i><br/>
+					<a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>
+				</div>
 			</div>
 		</div>
 	</body>
