--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 					<!--
 					<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a>
 					-->	
-					<i>Twitterのダイレクトメッセージをくださるとすぐに反応できます</i><br/>
+					<span>Twitterのダイレクトメッセージをくださるとすぐに反応できます</span><br/>
 					<a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>
 				</div>
 			</div>
