--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>About</title>
-        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/profile/stylesheet-profile.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     </head>
     <body>
         <h1></h1>
@@ -22,7 +23,82 @@
 			</div>
 		</div>
         <div class="main">
-            <h2></h2>
+			<div class="main-inner">
+            	<h5 class="main-contents">植木 克也</h5>
+				<div class="main-sabcontents">
+					<div class="main-texts">
+						<table>
+							<tr>
+								<th>所属</th>
+								<td>青山学院大学 理工学部 機械創造工学科 3年</td>
+							</tr>
+							<tr>
+								<th>出身</th>
+								<td>広島県広島市</td>
+							</tr>
+							<tr>
+								<th>出身高校</th>
+								<td>広島市立基町高校</td>
+							</tr>
+							<tr>
+								<th>GitHub</th>
+								<td><a href="https://github.com/k-ueki">k-ueki</a></td>
+							</tr>
+							<tr>
+								<th>Twitter</th>
+								<td><a href="https://twitter.com/ku6_rx">@ku6_rx</a></td>
+							</tr>
+						</table>
+						<!--
+						<br/>
+						<table>
+							<tr>
+								<th></th>
+								<td></td>
+							</tr>
+							<tr>
+								<th></th>
+								<td></td>
+							</tr>
+							<tr>
+								<th></th>
+								<td></td>
+							</tr>
+							<tr>
+								<th></th>
+								<td></td>
+							</tr>
+						</table>
+						-->
+						<br/>
+						<table>
+							<tr>
+								<th>言語</th>
+								<td>PHP</td>
+								<td>JavaScript</td>
+								<td>Golang</td>
+								<td>HTML/CSS</td>
+							</tr>
+							<tr>
+								<th>インターン</th>
+								<td></td>
+							</tr>
+							<tr>
+								<th></th>
+								<td></td>
+							</tr>
+							<tr>
+								<th></th>
+								<td></td>
+							</tr>
+						</table>
+						<br/>
+					</div>
+					<div class="main-icons">
+						<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a><a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>	
+					</div>
+				</div>
+			</div>
         </div>
     </body>
 </html>
