--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/portfolio/stylesheet-portfolio.css">
     </head>
     <body>
 		<div class="header">
