--- a/profile.html
+++ b/profile.html
@@ -42,46 +42,59 @@
 							</tr>
 							<tr>
 								<th>GitHub</th>
-								<td><a href="https://github.com/k-ueki">k-ueki</a></td>
+								<td><a href="https://github.com/k-ueki" target="_blank">k-ueki</a></td>
 							</tr>
 							<tr>
 								<th>Twitter</th>
-								<td><a href="https://twitter.com/ku6_rx">@ku6_rx</a></td>
+								<td><a href="https://twitter.com/ku6_rx" target="_blank">@ku6_rx</a></td>
 							</tr>
 						</table>
-						<!--
 						<br/>
 						<table>
 							<tr>
-								<th></th>
-								<td></td>
+								<th style="border-bottom:1px solid #000000;"> 言語</th>
 							</tr>
 							<tr>
 								<th></th>
-								<td></td>
-							</tr>
-							<tr>
-								<th></th>
-								<td></td>
-							</tr>
-							<tr>
-								<th></th>
-								<td></td>
-							</tr>
-						</table>
-						-->
-						<br/>
-						<table>
-							<tr>
-								<th>言語</th>
-								<td>PHP</td>
-								<td>JavaScript</td>
 								<td>Golang</td>
-								<td>HTML/CSS</td>
 							</tr>
 							<tr>
-								<th>インターン</th>
+								<th></th>
+								<td>JavaScript(Vue.js,など)</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td>PHP</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td>C</td>
+							</tr>
+							<tr>
+								<th></th><td>(HTML/CSS)</td>
+							</tr>
+							<tr>
+								<th style="border-bottom:1px solid #000000;">その他</th>
+							</tr>
+							<tr>
+								<th></th>
+								<td>Git</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td>(Docker)</td>
+							</tr>
+						</table>
+						<br/>
+						<table>
+							<tr>
+								<th style="border-bottom:1px solid #000000;">インターン</th>
+							</tr>
+							<tr>
+								<th></th>
+								<td>・<a href="http://cocospace.com/" target="_blank">株式会社ココスペース</a></td>
 								<td></td>
+								<td>  2017年11月~2019年4月</td>
 							</tr>
 							<tr>
 								<th></th>
@@ -89,7 +102,33 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td></td>
+								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
+								<td>1day-internship</td>
+								<td>2019年3,5月</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
+								<td>AWSハンズオン</td>
+								<td>2019年6月</td>
+							</tr>
+							<tr>
+								<th>new→</th>
+								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
+								<td><a href="https://voyagegroup.com/internship/treasure/" target="_blank">Treasure</a></td>
+								<td>2019年8月(3週間) 予定</td>
+							</tr>
+							<tr>
+								<th>new→</th>
+								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
+								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23253" target="_blank">アドテクコンペ</a></td>
+								<td>2019年9月 予定</td>
+							</tr>
+							<tr>
+								<th>new→</th>
+								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
+								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23256" target="_blank">ヒダッカソン~API編~</a></td>
+								<td>2019年9月 予定</td>
 							</tr>
 						</table>
 						<br/>
@@ -97,6 +136,7 @@
 					<div class="main-icons">
 						<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a><a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>	
 					</div>
+					<br/>
 				</div>
 			</div>
         </div>
