--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 				<div class="header-list">
 					<ul>
 					   	<li><a class="about btn" href="profile.html">About</a></li>
-						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
+						<li><a class="port btn" href="portfolio.html">Portfolios</a></li>
 						<li><a class="contact btn" href="contact.html">Contact</a></li>
 					</ul>
 				</div>
@@ -29,7 +29,7 @@
 					<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a>
 					-->	
 					<span>Twitterのダイレクトメッセージをくださるとすぐに反応できます</span><br/>
-					<a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>
+					<div><a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>←Click!</div>
 				</div>
 			</div>
 		</div>
