--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Portfolio</title>
         <link rel="stylesheet" type="text/css" href="css/portfolio/stylesheet-portfolio.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     </head>
     <body>
 		<div class="header">
@@ -14,12 +15,129 @@
 				<div class="header-list">
 					<ul>
 						<li><a class="about btn" href="profile.html">About</a></li>
-						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
+						<li><a class="port btn" href="portfolio.html">Portfolios</a></li>
 						<li><a class="contact btn" href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
-        <div class="main"></div>
+
+        <div class="main">
+			<div class="main-inner">
+            	<h5 class="main-contents">Portfolios</h5>
+				<div class="main-sabcontents">
+					<div class="main-texts">
+						<table>
+							<tr>
+								<th style="border-bottom:1px solid #000000;width:110px;">インターン</th>
+							</tr>
+							<tr>
+								<th></th>
+								<td>・<a href="http://cocospace.com/" target="_blank">株式会社ココスペース</a></td>
+								<td></td>
+								<td>  2017年11月~2019年4月</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3" style="text-indent:2em;">バックエンドエンジニアとして医療システム開発、自社開発にコミット。サーバーサイドの実装はPHPで行っていたが実際にはフロントの調整などの仕事も多く、必要なデータをDBから引き抜きフロントに反映させるなど行ったりしていた。その過程で、必要なSQLメソッドを実装したりもしていた。</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td><br/></td>
+							</tr>
+							<tr>
+								<th></th>
+								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
+								<td>1day-internship</td>
+								<td>2019年3,5月</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3" style="text-indent:2em;">簡単な掲示板アプリのCRUD処理などを行うAPIをGoで実装。チーム開発も行い、先の掲示板アプリに外部のAPIを叩いて"おもしろく"した。弊チームではyahooのお天気APIを叩きbotとして使った。もっと面白くしたかったが制限時間があったので少し時間が足りなかった(反省)。チーム内で最低限動くものは作れたのでチーム開発としてはとても有意義だった。なお、私はサーバーサイドでAPIを叩く関連のところを担当した。</td>
+							</tr>
+							<!--
+							<tr>
+								<th>new→</th>
+								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
+								<td><a href="https://voyagegroup.com/internship/treasure/" target="_blank">Treasure</a></td>
+								<td>2019年8月(3週間) 予定</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3" style="text-indent:2em;">aueo</td>
+							</tr>
+							<tr>
+								<th>new→</th>
+								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
+								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23253" target="_blank">アドテクコンペ</a></td>
+								<td>2019年9月 予定</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3" style="text-indent:2em;">aueo</td>
+							</tr>
+							<tr>
+								<th>new→</th>
+								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
+								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23256" target="_blank">ヒダッカソン~API編~</a></td>
+								<td>2019年9月 予定</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3" style="text-indent:2em;">aueo</td>
+							</tr>
+							-->
+						</table>	
+						<br/>
+						<table>
+							<tr>
+								<th style="border-bottom:1px solid #000000;width:100px;">趣味開発</th>
+							</tr>
+							<tr>
+								<th></th>
+								<td>・<a href="https://github.com/k-ueki/BookShelf">本棚を共有できるwebアプリケーション</a></td>
+								<td>2019年4月~(未デプロイ)</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:1em;">・きっかけ</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3" style="text-indent:2em;">本を買って帰った時に家族が同じ本を持っていたという経験があり、本棚をコミュニティで共有したい考えたことが背景</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:1em;">サーバーサイド ： Golang</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:1em;">フロント ： Vue.js</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td><img src="sources/bookshelf1.png" colspan="2" width="400px" ></img></td>
+							</tr>
+							<tr><td><br/></td></tr>
+							<tr>
+								<th></th>
+								<td>・<a href="https://github.com/k-ueki/TradingBit">Bitcoin自動トレード</a></td>
+								<td>2019年8月(予定)~</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:2em;">Golang,Vue.js</td>
+							</tr>
+						</table>
+						<br/>
+					</div>
+					<div class="main-icons">
+						<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a><a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>	
+					</div>
+					<br/>
+				</div>
+			</div>
+		</div>
+
     </body>
 </html>
