--- a/profile.html
+++ b/profile.html
@@ -16,12 +16,13 @@
 				<div class="header-list">
 					<ul>
 						<li><a class="about btn" href="profile.html">About</a></li>
-						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
+						<li><a class="port btn" href="portfolio.html">Portfolios</a></li>
 						<li><a class="contact btn" href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
+
         <div class="main">
 			<div class="main-inner">
             	<h5 class="main-contents">植木 克也</h5>
@@ -53,25 +54,47 @@
 						<table>
 							<tr>
 								<th style="border-bottom:1px solid #000000;"> 言語</th>
+								<td width="150px"></td>
+								<td width="250px">経験</td>
+								<td>使用場所</td>
 							</tr>
 							<tr>
 								<th></th>
 								<td>Golang</td>
+								<td>約8ヶ月(2018/12~)</td>
+								<td>趣味、インターン</td>
 							</tr>
 							<tr>
 								<th></th>
-								<td>JavaScript(Vue.js,など)</td>
+								<td>JavaScript</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:1em;">Vue.js</td>
+								<td>0.5年</td>
+								<td>趣味、インターン</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:1em;">jQuery</td>
+								<td>1.5年</td>
+								<td>インターン</td>
 							</tr>
 							<tr>
 								<th></th>
 								<td>PHP</td>
+								<td>約1.5年(今は使っていない)</td>
+								<td>インターン</td>
 							</tr>
 							<tr>
 								<th></th>
 								<td>C</td>
+								<td>約1.5年</td>
+								<td>授業等,(レベル低)(使用頻度低)</td>
 							</tr>
 							<tr>
-								<th></th><td>(HTML/CSS)</td>
+								<th></th>
+								<td>(HTML/CSS)</td>
 							</tr>
 							<tr>
 								<th style="border-bottom:1px solid #000000;">その他</th>
