--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="header-list">
 					<ul>
 					   	<li><a class="about btn" href="profile.html">About</a></li>
-						<li><a class="port btn" href="portfolio.html">PortFolio</a></li>
+						<li><a class="port btn" href="portfolio.html">Portfolios</a></li>
 						<li><a class="contact btn" href="contact.html">Contact</a></li>
 					</ul>
 				</div>
