--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             	<h5 class="main-contents">Portfolios</h5>
 				<div class="main-sabcontents">
 					<div class="main-texts">
-						<table>
+						<table style="text-align:left;">
 							<tr>
 								<th style="border-bottom:1px solid #000000;width:110px;">インターン</th>
 							</tr>
@@ -89,7 +89,7 @@
 							-->
 						</table>	
 						<br/>
-						<table>
+						<table style="text-align:left;">
 							<tr>
 								<th style="border-bottom:1px solid #000000;width:100px;">趣味開発</th>
 							</tr>
