--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
+								<td>・<a href="https://voyagegroup.com/" target="_blank">VOYAGE GROUP</a></td>
 								<td>1day-internship</td>
 								<td>2019年3,5月</td>
 							</tr>
@@ -95,7 +95,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td>・<a href="https://github.com/k-ueki/BookShelf">本棚を共有できるwebアプリケーション</a></td>
+								<td>・<a href="https://github.com/k-ueki/BookShelf" target="_blank" >本棚を共有できるwebアプリケーション</a></td>
 								<td>2019年4月~(未デプロイ)</td>
 							</tr>
 							<tr>
@@ -121,7 +121,7 @@
 							<tr><td><br/></td></tr>
 							<tr>
 								<th></th>
-								<td>・<a href="https://github.com/k-ueki/TradingBit">Bitcoin自動トレード</a></td>
+								<td>・<a href="https://github.com/k-ueki/TradingBit" target="_blank">Bitcoin自動トレード</a></td>
 								<td>2019年8月(予定)~</td>
 							</tr>
 							<tr>
