--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
 		<div class="main">
 			<div class="main-inner">
-				<h4 class="main-contents"></h4>
+				<h4 class="main-contents">This is Katsuya Ueki's page.</h4>
 				<h2 class="contents-item"></h2>
-				<button class="hello">Click!</button>
 	
 				<!--<img src="sources/IMG_1098.jpg" witdh="300" height="200">-->
 			</div>
