--- a/portfolio.html
+++ b/portfolio.html
@@ -93,6 +93,8 @@
 							<tr>
 								<th style="border-bottom:1px solid #000000;width:100px;">趣味開発</th>
 							</tr>
+
+							<!----------本棚--------------->
 							<tr>
 								<th></th>
 								<td>・<a href="https://github.com/k-ueki/BookShelf" target="_blank" >本棚を共有できるwebアプリケーション</a></td>
@@ -118,7 +120,29 @@
 								<th></th>
 								<td><img src="sources/bookshelf1.png" colspan="2" width="400px" ></img></td>
 							</tr>
+							<!------------------------>
+
 							<tr><td><br/></td></tr>
+
+							<!--twitter -->
+							<tr>
+								<th></th>
+								<td>・<a href="https://github.com/k-ueki/Twitter-Managementer" target="_blank">Twitter-Managementer</a></td>
+								<td>2019年7月くらい~</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:2pm;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/>CLでtweetできるようにもしたい</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td style="text-indent:2pm;">Golang,Vue.js</td>
+							</tr>
+								<!----------------------------->
+
+							<tr><td><br/></td></tr>
+
+							<!-- BitCoint自動トレード-->
 							<tr>
 								<th></th>
 								<td>・<a href="https://github.com/k-ueki/TradingBit" target="_blank">Bitcoin自動トレード</a></td>
@@ -128,6 +152,11 @@
 								<th></th>
 								<td style="text-indent:2em;">Golang,Vue.js</td>
 							</tr>
+							<!------------------------>
+
+							<tr><td><br/></td></tr>
+
+
 						</table>
 						<br/>
 					</div>
