--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td style="text-indent:2pm;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/>CLでtweetできるようにもしたい</td>
+								<td colspan="3"style="text-indent:2pm;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/>CLでtweetできるようにもしたい</td>
 							</tr>
 							<tr>
 								<th></th>
