--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td>・<a href="http://cocospace.com/" target="_blank">株式会社ココスペース</a></td>
+								<td style="font-size:24px;">・<a href="http://cocospace.com/" target="_blank">株式会社ココスペース</a></td>
 								<td></td>
 								<td>  2017年11月~2019年4月</td>
 							</tr>
@@ -47,7 +47,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td>・<a href="https://voyagegroup.com/" target="_blank">VOYAGE GROUP</a></td>
+								<td style="font-size:24px;">・<a href="https://voyagegroup.com/" target="_blank">VOYAGE GROUP</a></td>
 								<td>1day-internship</td>
 								<td>2019年3,5月</td>
 							</tr>
@@ -97,7 +97,7 @@
 							<!----------本棚--------------->
 							<tr>
 								<th></th>
-								<td>・<a href="https://github.com/k-ueki/BookShelf" target="_blank" >本棚を共有できるwebアプリケーション</a></td>
+								<td style="font-size:24px;">・<a href="https://github.com/k-ueki/BookShelf" target="_blank" >本棚を共有できるwebアプリケーション</a></td>
 								<td>2019年4月~(未デプロイ)</td>
 							</tr>
 							<tr>
@@ -127,7 +127,7 @@
 							<!--twitter -->
 							<tr>
 								<th></th>
-								<td>・<a href="https://github.com/k-ueki/Twitter-Managementer" target="_blank">Twitter-Managementer</a></td>
+								<td style="font-size:24px;">・<a href="https://github.com/k-ueki/Twitter-Managementer" target="_blank">Twitter-Managementer</a></td>
 								<td>2019年7月くらい~</td>
 							</tr>
 							<tr>
@@ -145,7 +145,7 @@
 							<!-- BitCoint自動トレード-->
 							<tr>
 								<th></th>
-								<td>・<a href="https://github.com/k-ueki/TradingBit" target="_blank">Bitcoin自動トレード</a></td>
+								<td style="font-size:24px;">・<a href="https://github.com/k-ueki/TradingBit" target="_blank">Bitcoin自動トレード</a></td>
 								<td>2019年8月(予定)~</td>
 							</tr>
 							<tr>
