--- a/portfolio.html
+++ b/portfolio.html
@@ -132,11 +132,11 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td colspan="3"style="text-indent:2pm;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/>CLでtweetできるようにもしたい</td>
+								<td colspan="3"style="text-indent:2em;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/>CLでtweetできるようにもしたい</td>
 							</tr>
 							<tr>
 								<th></th>
-								<td style="text-indent:2pm;">Golang,Vue.js</td>
+								<td style="text-indent:2em;">Golang,Vue.js</td>
 							</tr>
 								<!----------------------------->
 
@@ -168,7 +168,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td colspan="3" style="text-indent:2pm;">個人的なToDoアプリを作りたい。<br/>・googleカレンダーとの連携<br/>・メールでの通知機能<br/>・CLで管理<br/>あたりができるようにしたい</td>
+								<td colspan="3" style="text-indent:2em;">個人的なToDoアプリを作りたい。<br/>・googleカレンダーとの連携<br/>・メールでの通知機能<br/>・CLで管理<br/>あたりができるようにしたい</td>
 							</tr>
 							<!------------------------>
 
