--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
 							<!--twitter -->
 							<tr>
 								<th></th>
-								<td style="font-size:18px;">・<a href="https://github.com/k-ueki/Twitter-Managementer" target="_blank">Twitter-Managementer</a></td>
+								<td style="font-size:18px;">・<a href="https://github.com/k-ueki/Twitter-Managementer" target="_blank">Twitter-Manager</a></td>
 								<td>2019年7月くらい~</td>
 							</tr>
 							<tr>
