--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 					<div class="main-texts">
 						<table style="text-align:left;">
 							<tr>
-								<th style="border-bottom:1px solid #000000;width:110px;">インターン</th>
+								<th style="border-bottom:1px solid #000000;width:110px;">インターン・アルバイト</th>
 							</tr>
 							<tr>
 								<th></th>
