--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,16 @@
 					<!--
 					<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a>
 					-->	
+					<table>
+						<th>メアド</th>
+						<td>ku6</td>
+					</table>
 					<span>Twitterのダイレクトメッセージをくださるとすぐに反応できます</span><br/>
 					<div><a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>←Click!</div>
 				</div>
+			</div>
+			<div class="mail-form">
+
 			</div>
 		</div>
 	</body>
