--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 					<a href="https://github.com/k-ueki"><i class="fab fa-github github"></i></a>
 					-->	
 					<span>メアド : k.ueki@rb4.so-net.ne.jp</span><br/><br/>
-					<span>Twitterのダイレクトメッセージをくださるとすぐに反応できます</span><br/>
+					<span>メールかTwitterのダイレクトメッセージをくださるとすぐに反応できます</span><br/>
 					<div><a href="https://twitter.com/ku6_rx"><i class="fab fa-twitter twitter"></i></a>←Click!</div>
 				</div>
 			</div>
