--- a/profile.html
+++ b/profile.html
@@ -42,6 +42,9 @@
 								<td>広島市立基町高校</td>
 							</tr>
 							<tr>
+								<th>趣味/好きなこと</th>
+								<td colspan="2">スノボ,散歩,プログラミングなど</td>
+							<tr>
 								<th>GitHub</th>
 								<td><a href="https://github.com/k-ueki" target="_blank">k-ueki</a></td>
 							</tr>
