--- a/profile.html
+++ b/profile.html
@@ -42,8 +42,8 @@
 								<td>広島市立基町高校</td>
 							</tr>
 							<tr>
-								<th>趣味/好きなこと</th>
-								<td colspan="2">スノボ,散歩,プログラミングなど</td>
+								<th style="style:100px;">趣味/好きなこと</th>
+								<td colspan="2">スノボ,開発,散歩,etc...</td>
 							<tr>
 								<th>GitHub</th>
 								<td><a href="https://github.com/k-ueki" target="_blank">k-ueki</a></td>
