--- a/portfolio.html
+++ b/portfolio.html
@@ -128,15 +128,23 @@
 							<tr>
 								<th></th>
 								<td style="font-size:18px;">・<a href="https://github.com/k-ueki/Twitter-Managementer" target="_blank">Twitter-Managementer</a></td>
-								<td>2019年7月7日~</td>
+								<td>2019/7/7~2019/8/5</td>
 							</tr>
 							<tr>
 								<th></th>
-								<td colspan="3"style="text-indent:2em;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/>CLでtweetできるようにもしたい</td>
+								<td colspan="3"style="text-indent:2em;">Twitterのfollowerの管理等をいい感じにしてくれるアプリが目標<br/> =>新しくフォローされた、アンフォローされたを検知し、web上で表示&フォローアンフォローをできるようにした</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td colspan="3"style="text-indent:2em;">・自慢ポイント</td>
 							</tr>
 							<tr>
 								<th></th>
 								<td style="text-indent:2em;">Golang,Vue.js</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td><img src="sources/TwitterManager1.png" colspan="2" width="400px"></img></td>
 							</tr>
 								<!----------------------------->
 
