--- a/profile.html
+++ b/profile.html
@@ -28,6 +28,7 @@
             	<h5 class="main-contents">植木 克也</h5>
 				<div class="main-sabcontents">
 					<div class="main-texts">
+						<span style="float:right;">2019/6/20 更新</span>
 						<table>
 							<tr>
 								<th>所属</th>
