--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,8 @@
             	<h5 class="main-contents">Portfolios</h5>
 				<div class="main-sabcontents">
 					<div class="main-texts">
+						<span style="float:right;">2019/8/5 更新</span>
+						<br/><br/>
 						<table style="text-align:left;">
 							<tr>
 								<th style="border-bottom:1px solid #000000;width:110px;">インターン・アルバイト</th>
