--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td style="text-indent:2em;">Golang,Vue.js</td>
+								<td style="text-indent:2em;">・使用技術:Golang,Vue.js</td>
 							</tr>
 							<tr>
 								<th></th>
