--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
 							<!-- ToDo -->
 							<tr>
 								<th></th>
-								<td style="font-size:18px;">・<a href="https://github.com/k-ueki/ToDos" target="_blank">ノリで作るToDoアプリ</a></td>
+								<td style="font-size:18px;">・<a href="https://github.com/k-ueki/ToDos" target="_blank">ToDoアプリ</a></td>
 								<td>2019年のどこか</td>
 							</tr>
 							<tr>
